test/Harper/Tests/Bad/LambdaTypeMismatchInPattern.har
value Bag a b c d = {
  data = {
    a :: a; b :: b; c :: c; d :: d;
  }
};

main :: Integer;
main = {
  (extract :: Bag Integer Integer Integer Integer -> a) = \Bag { a: (a :: a) } => a;
  (bag :: Bag Integer Integer Integer Integer) = val Bag { a = 1, b = 2, c = 3, d = 4 };
  return 42;
};